--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2024"
 tokio = { version = "1.44.1", features = ["full"] }
 rand ={ version =  "*"}
 regex = { version = "1.11.1" }
+ratatui = {version = "0.29.0" }
+crossterm = { version = "0.28.1", features = ["event-stream"]}
+futures = "0.3.31"
+color-eyre = "0.6.3"
 
 [[bin]]
 name = "server"
