--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ ratatui = {version = "0.29.0" }
 crossterm = { version = "0.28.1", features = ["event-stream"]}
 futures = "0.3.31"
 color-eyre = "0.6.3"
+chrono = "*"
 
 [[bin]]
 name = "server"
