--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ crossterm = { version = "0.28.1", features = ["event-stream"]}
 futures = "0.3.31"
 color-eyre = "0.6.3"
 chrono = "*"
+anyhow = "*"
 
 [[bin]]
 name = "server"
